Bridge {Notification,Operation}Definition to ContainerLike
We have overlapping interfaces dealing with the same thing --
{Notification,Operation}AsContainer and ContainerSchemaNodes. Hide the
former and unify the RPC operation provider.

Also increase visibility of these utilities by integrating them directly
into base interfaces.

Change-Id: Ib5c45785b2886a4c5f9c7b0393abe52259beefab
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>